--- a/helm-test/templates/kafka.yaml
+++ b/helm-test/templates/kafka.yaml
@@ -19,7 +19,7 @@ spec:
           cpu: {{ .Values.resources.cpu.limit }}
           memory: {{ .Values.resources.memory.limit }}
   kafka:
-    {{ if .Values.distributeWideOnNodes }}
+{{ if .Values.distributeWideOnNodes }}
     template:
       pod:
         affinity:
@@ -42,79 +42,64 @@ spec:
                       values:
                         - 'zookeeper'
                 topologyKey: {{ .Values.topologyKey }}
-    {{- end}}
+{{ end }}
     logging:
-      type: 'inline',
+      type: 'inline'
       loggers: {{ .Values.topologyKey }}
     authorization:
       superUsers: {{ .Values.superUsers }}
-      type: 'simple',
-    config: {{ .Values.brokerConfig }},
+      type: 'simple'
+    config: {{ .Values.brokerConfig }}
     jvmOptions: # Kafka broker does never require more than 4 to 6 GB heap
     # Minimal and maximal heap size should be identical to have explainable resources
     # Heap size must not exceed the memory of the pod
     #calculateHeapSize(availableMemory=kafkaSizing.memory, maximumHeapSize=4) +
     #TODO set heap size
-    {
-      "-XX": {
-        UseG1GC: true,
-        MaxGCPauseMillis: 20,
-        InitiatingHeapOccupancyPercent: 35, #
-        G1HeapRegionSize: '16M',
-        MinMetaspaceFreeRatio: 50,
-        MaxMetaspaceFreeRatio: 80,
-        ExplicitGCInvokesConcurrent: true,
-      },
-      "-D": "javax.net.debug=ssl"
-    },
-    listeners: [
-      { authentication: {
-        type: 'tls'
-      },
-        name: 'tls',
-        port: 9092,
-        tls: true,
+    #{
+    #  "-XX": {
+    #    UseG1GC: true,
+    #    MaxGCPauseMillis: 20,
+    #    InitiatingHeapOccupancyPercent: 35, #
+    #    G1HeapRegionSize: '16M',
+    #    MinMetaspaceFreeRatio: 50,
+    #    MaxMetaspaceFreeRatio: 80,
+    #    ExplicitGCInvokesConcurrent: true,
+    #  },
+    #  "-D": "javax.net.debug=ssl"
+    #},
+    listeners:
+      - authentication:
+          type: 'tls'
+        name: 'tls'
+        port: 9092
+        tls: true
         type: 'internal'
-      },
-      {
-        name: 'plain2',
-        port: 9093,
-        tls: false,
-        type: 'internal',
-      },
-    ],
-    replicas: {{ .Values.broker.replicas }},
-    resources: {
-      requests: {
-        cpu: {{ .Values.resources.cpu.request }},
-        memory: {{ .Values.resources.memory.request }},
-      },
-      limits: {
-        cpu: {{ .Values.resources.cpu.limit }},
-        memory: {{ .Values.resources.memory.limit }},
-      }
-    },
-    storage: {
-      type: 'jbod',
-      volumes: [
-        {
-          class: {{ .Values.storageClass }},
-          deleteClaim: true,
-          id: 0,
-          size: {{ .Values.resources.disk }},
-          type: 'persistent-claim',
-        },
-      ],
-    },
-    metricsConfig: {
-      type: 'jmxPrometheusExporter',
-      valueFrom: {
-        configMapKeyRef: {
-          name: 'kafka-metrics-config',
-          key: 'kafka-metrics-config.yml',
-        },
-      },
-    },
+      - name: 'plain2'
+        port: 9093
+        tls: false
+        type: 'internal'
+    replicas: {{ .Values.broker.replicas }}
+    resources:
+      requests:
+        cpu: {{ .Values.resources.cpu.request }}
+        memory: {{ .Values.resources.memory.request }}
+      limits:
+        cpu: {{ .Values.resources.cpu.limit }}
+        memory: {{ .Values.resources.memory.limit }}
+    storage:
+      type: 'jbod'
+      volumes:
+        - class: {{ .Values.storageClass }}
+          deleteClaim: true
+          id: 0
+          size: {{ .Values.resources.disk }}
+          type: 'persistent-claim'
+    metricsConfig:
+      type: 'jmxPrometheusExporter'
+      valueFrom:
+        configMapKeyRef:
+          name: 'kafka-metrics-config'
+          key: 'kafka-metrics-config.yml'
   zookeeper:
 {{ if .Values.distributeWideOnNodes }}
     template:
@@ -152,7 +137,7 @@ spec:
       requests:
         cpu: {{ .Values.resources.cpu.request }}
         memory: {{ .Values.resources.memory.request }}
-      limits: {
+      limits:
         cpu: {{ .Values.resources.cpu.limit }}
         memory: {{ .Values.resources.memory.limit }}
     storage:
