--- a/helm-test/values.yaml
+++ b/helm-test/values.yaml
@@ -27,6 +27,10 @@ zookeeper:
 storageClass:
   "ceph-rbd"
 
+ingressClassName: "nginx"
+
+hostname: "example.com"
+
 loggers:
   "log4j.appender.CONSOLE": 'org.apache.log4j.ConsoleAppender'
   "log4j.appender.CONSOLE.layout": 'net.logstash.log4j.JSONEventLayoutV1'
