--- a/helm-test/templates/kafka.yaml
+++ b/helm-test/templates/kafka.yaml
@@ -99,7 +99,7 @@ spec:
           brokers:
           {{ range $i := until .Values.broker.replicas }}
             - broker: {{ $i }}
-              host: broker-{{ . }}.{{ .Values.hostname }}
+              host: broker-{{ $i }}.{{ .Values.hostname }}
           {{ end }}
           class: {{ .Values.ingressClassName }}
     replicas: {{ .Values.broker.replicas }}
